<resources>
	<string name="app_name">Schulte Plus</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_news">What\'s up</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_schulte">Schulte</string>
	<string name="title_basics">Basics</string>
	<string name="title_profile">Profile</string>
	<string name="lbl_quick_launch">Quick Launch</string>
	<string name="err_unknown">Unknown error</string>
	<string name="str_empty" translatable="false"></string>
	<string name="lbl_time">Time</string>
	<string name="lbl_turns">Turns</string>
	<string name="lbl_pace">Pace</string>
	<string name="lbl_mu_second">sec</string>
	<string name="err_no_data">Can\'t get required data</string>
	<string name="messages_header" translatable="false">Messages</string>
	<string name="sync_header" translatable="false">Sync</string>
	<string name="prf_title_app">Application</string>
	<string name="prf_title_data">Share data</string>
	<string name="prf_title_sound_mode">Sound mode</string>
	<string name="signature_title" translatable="false">Your signature</string>
	<string name="reply_title" translatable="false">Default reply action</string>
	<string name="sync_title" translatable="false">Sync email periodically</string>
	<string name="attachment_title" translatable="false">Download incoming attachments</string>
	<string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
	<string name="hnt_input_width">input the width (1 -- 10)</string>
	<string name="hnt_input_height">input the height (1 -- 10)</string>
	<string name="str_continue">Would you like to go on?</string>
	<string name="title_result">Result</string>
	<string name="lbl_ok">OK</string>
	<string name="lbl_no_hell">heLL</string>
	<string name="lbl_no">No</string>
	<string name="txt_one_more_q">Train one more time?</string>
	<string name="lbl_show_password">Show password</string>
	<string name="lbl_show">Show</string>
	<string name="txt_settings">There are prestart settings of Schulte tables training should be improved</string>
	<string name="txt_news">Here is the news list coming soon.\n Brief info: https://handwiki.org/wiki/Schulte_table </string>
	<string name="txt_notification_desc">Notifications should be here</string>
	<string name="txt_dashboard_desc">Here the dashboard is developing</string>
	<string name="lbl_achievements">Achievements</string>
	<string name="lbl_bas_dot">The Dot</string>
	<string name="lbl_bas_dbl_dot">Double Dot</string>
	<string name="lbl_bas_circles_rb">Circles Red/Blue</string>
	<string name="lbl_bas_circles_rb_lined">Circles R/B Lined</string>
	<string name="lbl_bas_circles_rb_crossed">Circles R/B Crossed</string>
	<string name="lbl_bas_pyramidot">Piramidot</string>
	<string name="lbl_bas_necker_cube">Necker\'s cube</string>
	<string name="lbl_bas_necker_cube_double">Necker\'s Cube Doubled</string>
	<string name="lbl_bas_necker_cylinder">Rover\'s Glass</string>
	<string name="lbl_bas_necker_ball">Rover\'s Ball</string>
	<string name="lbl_bas_dancing_girl">Dancing Girl</string>
	<string name="lbl_bas_dancing_cat">Dancing Cat</string>
	<string name="txt_bas_description">There are very simple therefore hard exercises which are require your stable attention</string>
	<string name="lbl_bas_double">Twin mode*</string>
	<string name="lbl_bas_double_desc">For the asterisk-marked exercises content will run as a parallel stereo image</string>
	<string name="lbl_bas_penrose_triangle">Penrose\'s Triangle</string>
	<string name="lbl_sd">s.Deviation:</string>
	<string name="lbl_average">Average:</string>
	<string name="lbl_turns_missed">Turns missed</string>
	<string name="title_activity_basics">Schulte+ Basics</string>
	<string name="dummy_button" translatable="false">Dummy Button</string>
	<string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
	<string name="lbl_bas_khao_manee">Khao Manee</string>
	<string name="menu_user_long">User related options</string>
	<string name="menu_user_short">User</string>
	<string name="menu_about_long">About the application</string>
	<string name="menu_about_short">About</string>
	<string name="menu_contact_long">Contact to developer</string>
	<string name="menu_contact_short">Contact</string>
	<string name="menu_data_sharing_long">Agree to share non-personal data</string>
	<string name="menu_how_mistakes_long">App shows mistakes</string>
	<string name="lbl_options">Options</string>
	<string name="prf_data_sum">SUM</string>
	<string name="prf_data_sum_off">Your exercise results are NOT visible, so you also can NOT see the other users\' results</string>
	<string name="prf_data_on">Your exercise results are VISIBLE on the server dashboard, though you also can SEE the other users\' results</string>
	<string name="prf_data_st_on">ST ON</string>
	<string name="prf_data_st_off">ST OFF</string>
	<string name="prf_title_sound_yn">Sound response</string>
	<string name="prf_title_vibration">Vibration response</string>
	<string name="prf_cat_help">Help</string>
	<string name="prf_title_feedback">Send feedback</string>
	<string name="prf_sum_feedback">Report technical issues or suggest new features</string>
	<string name="prf_user_name">Name</string>
	<string name="prf_user_name_sum">Name or nickname what\'s visible to other users</string>
	<string name="prf_user_email">e-mail</string>
	<string name="prf_user_email_sum">Identifier that allows restoring data (not visible to other users)</string>
	<string name="prf_about_sum01">This application dedicated to main idea of human development.
		It implements well-known trainee tool Tables of dr.Schulte who developed them to study human\'s attention and to help people with mental diseases improve their abilities.\n
		Besides several variants of Schulte Tables, we put in the app some psychonetics-tested treasures which are necessary to everyone who pursuits: Consciousness, Self-Development and Open-Mind approach to the Universe. </string>
	<string name="lbl_click"><![CDATA[Click here ->]]></string>
	<string name="prf_menu_about_url">Our website</string>
	<string name="prf_current_level_dialog_message">You can change your level within the reached span</string>
	<string name="prf_current_level_title">"Your current level out of "</string>
	<string name="prf_current_level_summary">The level you can choose for rating trainings</string>
	<string name="prf_current_level_units">Stars</string>
	<string name="prf_level_title">Level</string>
	<string name="prf_level_summary">Your maximum reached level is</string>
	<string name="prf_hours_title">Hours</string>
	<string name="prf_hours_summary">Earned number of \'minutes\' converted to hours of practice</string>
	<string name="txt_schulte_description">These are core exercises based upon Schulte methods</string>
	<string name="lbl_schulte_1_sequence">Primary flow</string>
	<string name="lbl_schulte_1_sequence_sum">The exercise wants you to collect growing sequence</string>
	<string name="x_size">Field width or x-size</string>
	<string name="y_size">Field height or y-size</string>
	<string name="lbl_rating">Ratings</string>
	<string name="lbl_rating_sum_on">Your settings gets comparable to other members\' settings. Your scores might be written to the Wall of Fame.</string>
	<string name="lbl_rating_sum_off">This settings are for variety of personal training. Your scores are saved into your Achievements table.</string>
	<string name="lbl_schulte_2_sequences">Ice and Fire (7х7)</string>
	<string name="lbl_schulte_2_sequences_sum">Two sequences are waiting: Blue grows from 1 and Red wanes from 24</string>
	<string name="lbl_schulte_3_sequences">Four Seasons (10х10)</string>
	<string name="lbl_schulte_3_sequences_sum">For sequences: Up, Down, Convergent, Divergent...  That might make you mad for starters</string>
	<string name="lbl_schulte_4_mishmash">Mishmash!</string>
	<string name="lbl_schulte_4_mishmash_sum">Well, try to find them all totally unique</string>
	<string name="lbl_hints">Status</string>
	<string name="lbl_hints_sum">These fancy glows, digital reminders and timing are for rookie levels only.</string>
	<string name="lbl_symbol_type">Cell\'s symbol type</string>
	<string name="lbl_shuffle">Shaken, not stirred!</string>
	<string name="lbl_shuffle_sum_on">Each new turn you are meeting new field</string>
	<string name="lbl_shuffle_sum_off">Field stays permanent until coped out</string>
	<string name="str_number" translatable="false">number</string>
	<string name="prf_menu_about_url_sum">Visit and get additional resources</string>
	<string name="src_psychonetics_social_media">https://psychology.fandom.com/wiki/Oleg_Bakhtiyarov</string>
	<string name="src_menu_about_url" translatable="true">https://tinyurl.com/schulte-plus</string>
	<string name="src_menu_about_email" translatable="false">"support@attplus.in"</string>
	<string name="title_activity_schulte">Schulte+ Tables</string>
	<string name="lbl_distraction">✓</string>
	<string name="lbl_back">◁</string>
	<string name="lbl_schulte_status_next">Next</string>
	<string name="lbl_schulte_status_counter">Turns</string>
	<string name="lbl_schulte_status_mistakes">Wrong</string>
	<string name="lbl_schulte_status_time">Time</string>
	<string name="title_signup">Sign Up</string>
	<string name="hint_login">Username (pseudonym)</string>
	<string name="hint_email">email address</string>
	<string name="hint_pass">Schulte-plus password</string>
	<string name="lbl_go_on">Go on</string>
	<string name="str_signup_go_off"><u>Already have an account?\nGo to login!</u></string>
	<string name="str_login_go_off"><u>Do not have an account?\nGo to sign up!</u></string>
	<string name="title_login">Log in</string>
	<string name="msg_username_empty">The username can\'t be empty</string>
	<string name="msg_username_wrong">The username seems incorrect</string>
	<string name="msg_password_rules">Password should have 6–15 Latin letters or Arabic digits or symbols ~!@#$%^*()+=</string>
	<string name="msg_password_wrong">Password seems incorrect</string>
	<string name="msg_user_signed_up">successfully signed up.</string>
	<string name="msg_user_signed_up_failed">"-- unable to sign up. "</string>
	<string name="msg_email_pattern">email should be in an appropriate format</string>
	<string name="prf_points_title">Seconds</string>
	<string name="prf_user_logoff">Log off</string>
	<string name="prf_user_logoff_description">Leave the app unauthorized</string>
	<string name="prf_title_online">Online</string>
	<string name="lbl_delete_account"><u>Delete account</u></string>
	<string name="txt_delete_account_description">Delete your personal data from all shared application resources and depersonalize all your records. Continue?</string>
	<string name="title_choice">Choice</string>
	<string name="txt_choice_description">Chose additional training space</string>
	<string name="title_sssr">Spheres</string>
	<string name="lbl_sssr">Spheres</string>
	<string name="title_schulte_parents">Schulte for parents</string>
	<string name="lbl_sssr_main">USSR</string>
	<string name="lbl_sssr_main_sum">Sphere of separate self-realization (fulfillment)</string>
	<string name="lbl_sssr_job"><![CDATA[Job & Learning]]></string>
	<string name="lbl_sssr_physical">Physical</string>
	<string name="lbl_sssr_leisure">Rest and Leisure</string>
	<string name="lbl_sssr_family">Family</string>
	<string name="lbl_sssr_friends">Friends</string>
	<string name="lbl_sssr_chores">Chores</string>
	<string name="lbl_sssr_sleep">Sleep</string>
	<string name="lbl_sssr_sum">Exercises to increase your mindfulness, make your life style more measurable and clear</string>
	<string name="lbl_sssr_intercept01">Interception-1</string>
	<string name="lbl_sssr_intercept02">Interception-2</string>
	<string name="lbl_sssr_intercept03">Interception-3</string>
</resources>