<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) "Smart Rovers" 2024.
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory app:key="prf_menu_user" app:title="@string/menu_user_short" app:icon="@drawable/ic_baseline_perm_identity_24" >
		<EditTextPreference app:key="prf_level"
			app:defaultValue="1"
			app:icon="@drawable/ic_baseline_star_24"
			app:title="@string/prf_level_title"
			app:summary="@string/prf_level_summary"
			app:enabled="false"/>
		<!--			app:useSimpleSummaryProvider="true"-->
		<SeekBarPreference app:key="prf_current_level"
			app:defaultValue="1"
			app:min="1"
			
			app:showSeekBarValue="true"
			app:shouldDisableView="false"
			app:title="@string/prf_current_level_title"
			app:summary="@string/prf_current_level_summary"
			app:dialogMessage="@string/prf_current_level_dialog_message"
			/>
		<!--		android:max="2"-->
		<EditTextPreference app:key="prf_hours" app:title="@string/prf_hours_title" app:isPreferenceVisible="true" android:enabled="false"/>
		<EditTextPreference app:key="prf_points" app:title="@string/prf_points_title" app:isPreferenceVisible="true" android:enabled="false"/>
		<EditTextPreference app:key="prf_user_name" app:title="@string/prf_user_name" app:summary="@string/prf_user_name_sum" />
		<EditTextPreference app:key="prf_user_email" app:title="@string/prf_user_email" app:summary="@string/prf_user_email"/>
		<SwitchPreferenceCompat app:key="prf_title_data" app:title="@string/prf_title_data" app:summary="@string/prf_data_sum"  app:summaryOff="@string/prf_data_sum_off" app:summaryOn="@string/prf_data_on" app:switchTextOn="@string/prf_data_st_on" app:switchTextOff="@string/prf_data_st_off"  />
		<Preference
			app:key="prf_user_logoff"
			app:persistent="false"
			app:title="@string/prf_user_logoff"
			app:summary="@string/prf_user_logoff_description" />
		<Preference
			app:key="prf_user_delete"
			app:persistent="false"
			app:title="@string/lbl_delete_account"
			app:summary="@string/txt_delete_account_description" />
	
	</PreferenceCategory>
	
	<PreferenceCategory app:key="prf_application" app:title="@string/prf_title_app" app:icon="@drawable/ic_ab_settings" >
		<SwitchPreference app:key="prf_online" app:title="@string/prf_title_online" />
		<SwitchPreference app:key="prf_vibration" app:title="@string/prf_title_vibration" />
		<SwitchPreference app:key="prf_sound" app:title="@string/prf_title_sound_yn" />
		<ListPreference app:key="prf_sound_mode" app:title="@string/prf_title_sound_mode" app:entries="@array/sound_modes_entries" app:entryValues="@array/sound_modes_values" />

	</PreferenceCategory>
	
	<PreferenceCategory app:key="help_category" app:title="@string/prf_cat_help" app:icon="@drawable/ic_baseline_action_about_24" >
		<Preference
			app:key="prf_feedback"
			app:fragment="org.nebobrod.schulteplus.ui.PrefsAboutFragment"
			app:summary="@string/menu_about_long"
			app:title="@string/menu_about_short"/>
	
	</PreferenceCategory>
	
</PreferenceScreen>