<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<extra
		android:name="version"
		android:value="@string/app_version"/>
	
	<PreferenceCategory app:key="prf_menu_about_details"
		app:title="@string/menu_about_long"
		app:icon="@drawable/ic_ab_schulte_plus"
		app:summary="@string/app_version" >

		<Preference
			app:key="prf_about_app_name"
			app:title="@string/app_name"
			app:summary="@string/prf_about_sum01"
			app:singleLineTitle="false"
			app:iconSpaceReserved="false"
			/>
		
		<Preference
			app:key="prf_about"
			app:summary="@string/prf_sum_feedback"
			app:title="@string/prf_title_feedback"
			android:icon="@drawable/ic_baseline_email_24">

			<intent android:action="android.intent.action.VIEW"
				android:data="@string/src_menu_about_email">
				<extra android:name="android.intent.extra.TEXT"
					android:value="Ваше сообщение разработчикам Put your message to vendor " />
				<extra android:name="android.intent.extra.SUBJECT"
					android:value="Schulte Plus обращение / feedback" />
			</intent>
		</Preference>
		<Preference
			app:key="prf_click_button"
			app:title="@string/prf_sum_feedback"
			app:layout="@layout/layout_image_button"
			app:isPreferenceVisible="false">
		</Preference>
		
		<Preference
			app:key="prf_menu_about_url"
			app:title="@string/prf_menu_about_url"
			app:summary="@string/prf_menu_about_url_sum"
			android:icon="@drawable/ic_baseline_link_24"
			app:persistent="false"
			>
<!--			https://cutt.ly/DwbxKG56-->

		</Preference>
		
	</PreferenceCategory>
	
</PreferenceScreen>