<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) "Smart Rovers" 2024.
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_dashboard">
	
	<fragment
		android:id="@+id/navigation_dashboard"
		android:name="org.nebobrod.schulteplus.ui.dashboard.DashboardFragment"
		android:label="@string/title_dashboard"
		tools:layout="@layout/fragment_dashboard" />

	<fragment
		android:id="@+id/navigation_home"
		android:name="org.nebobrod.schulteplus.ui.home.HomeFragment"
		android:label="@string/title_news"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_schulte"
		android:name="org.nebobrod.schulteplus.ui.schulte.SchulteSettings"
		android:label="@string/title_schulte"
		/>
<!--	tools:layout="@layout/fragment_schulte_settings"-->
	

	<navigation android:id="@+id/navigation_plus"
		app:startDestination="@id/navigation_choice"
		app:route="@string/title_choice" >
		<fragment android:id="@+id/navigation_choice"
			android:name="org.nebobrod.schulteplus.ui.PrefsChoiceFragment"
			android:label="@string/title_choice" />
		
		<fragment
			android:id="@+id/navigation_schulte_parents"
			android:name="org.nebobrod.schulteplus.ui.schulteparents.Settings"
			android:label="@string/title_schulte_parents" />
			
		<fragment
			android:id="@+id/navigation_basics"
			android:name="org.nebobrod.schulteplus.ui.basics.BasicSettings"
			android:label="@string/title_basics" />
		<fragment
			android:id="@+id/navigation_sssr"
			android:name="org.nebobrod.schulteplus.ui.sssr.SssrSettings"
			android:label="@string/title_sssr"  />

	</navigation>

</navigation>
