<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	>
	
	<item
		android:id="@+id/navigation_notifications"
		android:enabled="false"
		android:icon="@drawable/ic_notifications_black_24dp"
		android:title="@string/title_notifications"
		android:visible="false" />
	
	<item
		android:id="@+id/navigation_dashboard"
		android:icon="@drawable/ic_dashboard_black_24dp"
		android:title="@string/title_dashboard" />
	
	<item
		android:id="@+id/navigation_basics"
		android:icon="@drawable/ic_basics2_black_24dp"
		android:title="@string/title_basics" />

	<item
		android:id="@+id/navigation_schulte"
		android:icon="@drawable/ic_schulte_black_24dp"
		android:title="@string/title_schulte" />

	<item
		android:id="@+id/navigation_home"
		android:icon="@drawable/ic_home_black_24dp"
		android:title="@string/title_home" />

</menu>